refactor: 타임테이블 왼쪽 터치 좌표 수정